@@ -19,6 +19,7 @@ def USB_B_IP = "172.22.11.2"
 def IPS = [ROUTER_IP, USB_B_IP]
 def reachableIP
 
+final MAX_JAVA_HEAP_SIZE_MB = 100;
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
@@ -37,12 +38,24 @@ deploy {
 				// getTargetTypeClass is a shortcut to get the class type using a string
 
 				frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
-					jvmArgs.add('-Dcom.sun.management.jmxremote=true')
-					jvmArgs.add('-Dcom.sun.management.jmxremote.port=1198')
-					jvmArgs.add('-Dcom.sun.management.jmxremote.local.only=false')
-					jvmArgs.add('-Dcom.sun.management.jmxremote.ssl=false')
-					jvmArgs.add('-Dcom.sun.management.jmxremote.authenticate=false')
-					jvmArgs.add("-Djava.rmi.server.hostname=${IPS[0]}")
+					// visual vm
+					// jvmArgs.add('-Dcom.sun.management.jmxremote=true')
+					// jvmArgs.add('-Dcom.sun.management.jmxremote.port=1198')
+					// jvmArgs.add('-Dcom.sun.management.jmxremote.local.only=false')
+					// jvmArgs.add('-Dcom.sun.management.jmxremote.ssl=false')
+					// jvmArgs.add('-Dcom.sun.management.jmxremote.authenticate=false')
+					// jvmArgs.add("-Djava.rmi.server.hostname=${IPS[0]}")
+
+					jvmArgs.add("-XX:+UnlockExperimentalVMOptions")
+					jvmArgs.add("-XX:GCTimeRatio=5")
+					jvmArgs.add("-XX:+UseSerialGC")
+					jvmArgs.add("-XX:MaxGCPauseMillis=50")
+
+					jvmArgs.add("-Xmx" + MAX_JAVA_HEAP_SIZE_MB + "M")
+					jvmArgs.add("-Xms" + MAX_JAVA_HEAP_SIZE_MB + "M")
+					jvmArgs.add("-XX:+AlwaysPreTouch")
+
+					// jvmArgs.add("-Xlog:gc") log garbage collector events in console
 				}
 
 				// Static files artifact
